--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
