--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.0",
     "eslint-config-airbnb": "^19.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
