:guitar: between navbar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
   "cSpell.words": [
     "กรุณากรอกข้อมูลให้ถูกต้อง",
+    "ค้นหาร้านอาหารที",
+    "เน้นรีวิวจริง",
     "ร้านกาแฟ",
     "สมัครสมาชิกสำเร็จ",
+    "อร่อยจริง",
     "อัปเดตเนื้อหาล่าสุด"
   ]
 }
