:guitar: edit profile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,15 @@
 {
   "cSpell.words": [
+    "nอีเมล",
     "กรุณากรอกข้อมูลให้ถูกต้อง",
+    "ข้อมูลส่วนตัว",
     "ค้นหาร้านอาหารที",
+    "ต้อนรับคุณ",
     "เน้นรีวิวจริง",
     "ร้านกาแฟ",
     "สมัครสมาชิกสำเร็จ",
     "อร่อยจริง",
-    "อัปเดตเนื้อหาล่าสุด"
+    "อัปเดตเนื้อหาล่าสุด",
+    "อัพเดต"
   ]
 }
