:guitar: create service update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
     "ค้นหาร้านอาหารที",
     "ต้อนรับคุณ",
     "เน้นรีวิวจริง",
+    "เปลี่ยนรหัสผ่าน",
+    "ยกเลิก",
     "ร้านกาแฟ",
     "สมัครสมาชิกสำเร็จ",
     "อร่อยจริง",
