:guitar: finish update profile

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "cSpell.words": [
     "nอีเมล",
     "กรุณากรอกข้อมูลให้ถูกต้อง",
+    "แก้ไขข้อมูลแล้ว",
     "ข้อมูลส่วนตัว",
     "ค้นหาร้านอาหารที",
     "ต้อนรับคุณ",
