--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
     "eslint-config-airbnb": "^19.0.4",
+    "md5-typescript": "^1.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
