--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,15 +3,26 @@
     "nอีเมล",
     "กรุณากรอกข้อมูลให้ถูกต้อง",
     "แก้ไขข้อมูลแล้ว",
+    "แก้ไขร้านค้า",
     "ข้อมูลส่วนตัว",
+    "เข้าสู่ระบบ",
     "ค้นหาร้านอาหารที",
+    "คำอธิบายร้าน",
     "ต้อนรับคุณ",
     "เน้นรีวิวจริง",
     "เปลี่ยนรหัสผ่าน",
     "ยกเลิก",
+    "ย้อนกลับ",
+    "รหัสผ่านไม่ถูกต้อง",
     "ร้านกาแฟ",
+    "ร้านอาหารดีมาก",
+    "รีวิวโดย",
+    "สกุล",
     "สมัครสมาชิกสำเร็จ",
+    "สร้างร้านค้า",
+    "ส่วน",
     "อร่อยจริง",
+    "อร้าน",
     "อัปเดตเนื้อหาล่าสุด",
     "อัพเดต"
   ]
