--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "dotenv": "^16.0.0",
     "eslint-config-airbnb": "^19.0.4",
     "md5-typescript": "^1.0.5",
+    "mui-image-slider": "^1.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-simple-image-slider": "^2.4.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
