--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,5 @@
 {
   "cSpell.words": [
-    "nอีเมล",
     "กรุณากรอกข้อมูลให้ถูกต้อง",
     "แก้ไขข้อมูลแล้ว",
     "แก้ไขร้านค้า",
@@ -8,6 +7,7 @@
     "เข้าสู่ระบบ",
     "ค้นหาร้านอาหารที",
     "คำอธิบายร้าน",
+    "จัดการข้อมูล",
     "ต้อนรับคุณ",
     "เน้นรีวิวจริง",
     "เปลี่ยนรหัสผ่าน",
@@ -24,6 +24,7 @@
     "อร่อยจริง",
     "อร้าน",
     "อัปเดตเนื้อหาล่าสุด",
-    "อัพเดต"
+    "อัพเดต",
+    "nอีเมล"
   ]
 }
