--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
     "ต้อนรับคุณ",
     "เน้นรีวิวจริง",
     "เปลี่ยนรหัสผ่าน",
+    "ไม่มีแสดงรูปภาพ",
     "ยกเลิก",
     "ย้อนกลับ",
     "รหัสผ่านไม่ถูกต้อง",
