--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,14 +10,18 @@
     "จัดการข้อมูล",
     "ต้อนรับคุณ",
     "เน้นรีวิวจริง",
+    "เบอร์โทรติดต่อ",
     "เปลี่ยนรหัสผ่าน",
     "ไม่มีแสดงรูปภาพ",
     "ยกเลิก",
     "ย้อนกลับ",
+    "ยังไม่มีข้อมูล",
     "รหัสผ่านไม่ถูกต้อง",
     "ร้านกาแฟ",
     "ร้านอาหารดีมาก",
     "รีวิวโดย",
+    "เว็บไซต์",
+    "เวลาทำการ",
     "สกุล",
     "สมัครสมาชิกสำเร็จ",
     "สร้างร้านค้า",
