--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,11 @@
     "ต้อนรับคุณ",
     "เน้นรีวิวจริง",
     "เบอร์โทรติดต่อ",
+    "ปกติ",
+    "ปิดทำการ",
+    "ปิดบัญชี",
     "เปลี่ยนรหัสผ่าน",
+    "เปิด",
     "ไม่มีแสดงรูปภาพ",
     "ยกเลิก",
     "ย้อนกลับ",
