--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,32 +1,65 @@
 {
   "cSpell.words": [
+    "bgcolor",
+    "firstname",
+    "idstore",
+    "ischecking",
+    "lastname",
+    "Linkmap",
+    "Navs",
+    "nอีเมล",
+    "passwordconfirm",
+    "showcomment",
+    "showlimit",
+    "storeview",
+    "tokenstore",
+    "tokenuser",
+    "TTFB",
+    "uploadimg",
     "กรุณากรอกข้อมูลให้ถูกต้อง",
     "แก้ไขข้อมูลแล้ว",
     "แก้ไขร้านค้า",
+    "แก้ไขร้านคาเฟ่",
+    "ข้อมูลร้าน",
     "ข้อมูลส่วนตัว",
     "เข้าสู่ระบบ",
+    "เขียนคอมเม้น",
     "ค้นหาร้านอาหารที",
     "คำอธิบายร้าน",
     "จัดการข้อมูล",
+    "จัดการผู้ใช้งาน",
+    "จัดการร้าน",
+    "จำกัดรูปภาพไม่เกิน",
+    "ใช้งานทั",
     "ต้อนรับคุณ",
+    "ตำแหน่ง",
     "เน้นรีวิวจริง",
+    "เบอร์โทร",
     "เบอร์โทรติดต่อ",
     "ปกติ",
     "ปิดทำการ",
     "ปิดบัญชี",
     "เปลี่ยนรหัสผ่าน",
     "เปิด",
+    "แผนที",
+    "โพสต์",
+    "มรูปบรรยากาศ",
     "ไม่มีแสดงรูปภาพ",
     "ยกเลิก",
     "ย้อนกลับ",
     "ยังไม่มีข้อมูล",
     "รหัสผ่านไม่ถูกต้อง",
     "ร้านกาแฟ",
+    "ร้านอาหาร",
     "ร้านอาหารดีมาก",
     "รีวิวโดย",
+    "เล่าประสบการณ์ที่ได้รับจากสถานที่นี้โดยละเอียด",
+    "เลือกประเภท",
     "เว็บไซต์",
     "เวลาทำการ",
     "สกุล",
+    "สถานะ",
+    "สถานะร้าน",
     "สมัครสมาชิกสำเร็จ",
     "สร้างร้านค้า",
     "ส่วน",
@@ -34,6 +67,7 @@
     "อร้าน",
     "อัปเดตเนื้อหาล่าสุด",
     "อัพเดต",
-    "nอีเมล"
+    "อัพเดตข้อมูลแล้ว",
+    "อีเมล์"
   ]
 }
