--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,5 @@
 {
   "cSpell.words": [
-    "bgcolor",
-    "firstname",
-    "idstore",
-    "ischecking",
-    "lastname",
-    "Linkmap",
-    "Navs",
-    "nอีเมล",
-    "passwordconfirm",
-    "showcomment",
-    "showlimit",
-    "storeview",
-    "tokenstore",
-    "tokenuser",
-    "TTFB",
-    "uploadimg",
     "กรุณากรอกข้อมูลให้ถูกต้อง",
     "แก้ไขข้อมูลแล้ว",
     "แก้ไขร้านค้า",
@@ -63,11 +47,28 @@
     "สมัครสมาชิกสำเร็จ",
     "สร้างร้านค้า",
     "ส่วน",
+    "หน้าแรก",
     "อร่อยจริง",
     "อร้าน",
     "อัปเดตเนื้อหาล่าสุด",
     "อัพเดต",
     "อัพเดตข้อมูลแล้ว",
-    "อีเมล์"
+    "อีเมล์",
+    "bgcolor",
+    "firstname",
+    "idstore",
+    "ischecking",
+    "lastname",
+    "Linkmap",
+    "nอีเมล",
+    "Navs",
+    "passwordconfirm",
+    "showcomment",
+    "showlimit",
+    "storeview",
+    "tokenstore",
+    "tokenuser",
+    "TTFB",
+    "uploadimg"
   ]
 }
