--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,21 @@
 {
   "cSpell.words": [
+    "bgcolor",
+    "firstname",
+    "idstore",
+    "ischecking",
+    "lastname",
+    "Linkmap",
+    "Navs",
+    "nอีเมล",
+    "passwordconfirm",
+    "showcomment",
+    "showlimit",
+    "storeview",
+    "tokenstore",
+    "tokenuser",
+    "TTFB",
+    "uploadimg",
     "กรุณากรอกข้อมูลให้ถูกต้อง",
     "แก้ไขข้อมูลแล้ว",
     "แก้ไขร้านค้า",
@@ -27,6 +43,7 @@
     "เปิด",
     "แผนที",
     "โพสต์",
+    "ภาพบรรยากาศ",
     "มรูปบรรยากาศ",
     "ไม่มีแสดงรูปภาพ",
     "ยกเลิก",
@@ -53,22 +70,6 @@
     "อัปเดตเนื้อหาล่าสุด",
     "อัพเดต",
     "อัพเดตข้อมูลแล้ว",
-    "อีเมล์",
-    "bgcolor",
-    "firstname",
-    "idstore",
-    "ischecking",
-    "lastname",
-    "Linkmap",
-    "nอีเมล",
-    "Navs",
-    "passwordconfirm",
-    "showcomment",
-    "showlimit",
-    "storeview",
-    "tokenstore",
-    "tokenuser",
-    "TTFB",
-    "uploadimg"
+    "อีเมล์"
   ]
 }
