--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
     "เข้าสู่ระบบ",
     "เขียนคอมเม้น",
     "ค้นหาร้านอาหารที",
+    "คะแนนรีวิวรวม",
     "คำอธิบายร้าน",
     "จัดการข้อมูล",
     "จัดการผู้ใช้งาน",
@@ -53,6 +54,7 @@
     "ร้านกาแฟ",
     "ร้านอาหาร",
     "ร้านอาหารดีมาก",
+    "รายละเอียด",
     "รีวิวโดย",
     "เล่าประสบการณ์ที่ได้รับจากสถานที่นี้โดยละเอียด",
     "เลือกประเภท",
