--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,6 +25,7 @@
     "เข้าสู่ระบบ",
     "เขียนคอมเม้น",
     "ค้นหาร้านอาหารที",
+    "คะน้าหมูกรอบ",
     "คะแนนรีวิวรวม",
     "คำอธิบายร้าน",
     "จัดการข้อมูล",
@@ -35,6 +36,7 @@
     "ต้อนรับคุณ",
     "ตำแหน่ง",
     "เน้นรีวิวจริง",
+    "บะหมี",
     "เบอร์โทร",
     "เบอร์โทรติดต่อ",
     "ปกติ",
@@ -45,6 +47,7 @@
     "แผนที",
     "โพสต์",
     "ภาพบรรยากาศ",
+    "มเมนูอาหาร",
     "มรายการอาหาร",
     "มรูปบรรยากาศ",
     "ไม่มีแสดงรูปภาพ",
@@ -55,6 +58,7 @@
     "ร้านกาแฟ",
     "ร้านอาหาร",
     "ร้านอาหารดีมาก",
+    "ราเมน",
     "รายละเอียด",
     "รีวิวโดย",
     "เล่าประสบการณ์ที่ได้รับจากสถานที่นี้โดยละเอียด",
