--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,11 +17,13 @@
     "TTFB",
     "uploadimg",
     "กรุณากรอกข้อมูลให้ถูกต้อง",
+    "กะเพรา",
     "แก้ไขข้อมูลแล้ว",
     "แก้ไขร้านค้า",
     "แก้ไขร้านคาเฟ่",
     "ข้อมูลร้าน",
     "ข้อมูลส่วนตัว",
+    "ข้าวเปล่า",
     "เข้าสู่ระบบ",
     "เขียนคอมเม้น",
     "ค้นหาร้านอาหารที",
@@ -33,6 +35,7 @@
     "จัดการร้าน",
     "จำกัดรูปภาพไม่เกิน",
     "ใช้งานทั",
+    "ซูชิ",
     "ต้อนรับคุณ",
     "ตำแหน่ง",
     "เน้นรีวิวจริง",
