--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,6 +60,7 @@
     "ยังไม่มีข้อมูล",
     "รหัสผ่านไม่ถูกต้อง",
     "ร้านกาแฟ",
+    "ร้านอร่อยอยู",
     "ร้านอาหาร",
     "ร้านอาหารดีมาก",
     "ราเมน",
@@ -76,6 +77,7 @@
     "สร้างร้านค้า",
     "ส่วน",
     "หน้าแรก",
+    "หาได้ที่นี่เรามีคำตอบ",
     "อร่อยจริง",
     "อร้าน",
     "อัปเดตเนื้อหาล่าสุด",
